Discover view - scrollbar and fixed progressbar (don't influencing sort)

--- a/client/app/routes/discover/discover.less
+++ b/client/app/routes/discover/discover.less
@@ -38,6 +38,10 @@
     text-align: right;
     transition: all 0.4s !important; /* COOL! */
   }
+  & md-chips.artist-tags .md-chips {
+    box-shadow: none !important;
+    text-align: center;
+  }
   & .artist-bio {
     padding: 0 1em;
     color: @grey-300;
